[sc-2765] Add labels in bulk from the resource list (#325)
* Extract label dropdown component and use it in resource list

- Fix multi-level dropdown
- Remove checkbox from resource bulk actions section
- Add label dropdown in resource bulk actions section

* Add selected labels to selected resources

- Add missing spanish and catalan translations using BabelEdit embedded Google Translate
- Fix style warning (replace start by flex-start)

* Fix tests

* Fix `resource.helpers` imports

  - Add sub-folders in `db`
  - Add missing exports in index.ts

* Don't send any request when there is no label selected

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -15,6 +15,7 @@
 	"account.delete_account": "Eliminar compte",
 	"account.delete_account_confirm": "Vull eliminar el compte {{account}} i totes les dades que conté.",
 	"account.delete_account_confirm_title": "Eliminar el compte?",
+	"account.delete_account_warning_1": "Si suprimiu el compte {{account}} , se suprimiran totes les dades existents",
 	"account.delete_user": "Vols suprimir l'usuari?",
 	"account.delete_user_confirm": "Vols eliminar el teu usuari i l'accés a Nuclia ?",
 	"account.delete_user_warning": "Segur que vols eliminar l'usuari {{ username }}?",
@@ -33,7 +34,7 @@
 	"account.nua_client": "Nom del client",
 	"account.nua_key_activity": "Registre d'activitat",
 	"account.nua_key_activity_subtitle": "TODO",
-	"account.nua_key_activity_title": "TODO",
+	"account.nua_key_activity_title": "{{key}} registre d'activitat",
 	"account.nua_key_delete": "Suprimir la clau de la Nuclia Understanding API",
 	"account.nua_key_delete_warning": "Si suprimiu aquesta clau, es perdran tots els treballs en curs (si n'hi ha).",
 	"account.nua_webhook": "Webhook URL",
@@ -86,6 +87,7 @@
 	"billing.plans": "Plans",
 	"billing.plans_available": "Plans disponibles",
 	"billing.subscribe": "Subscriure's",
+	"billing.total_now": "Total pendent ara {{num}}",
 	"billing.upgrade": "Actualitzar",
 	"confirm.delete_body": "Eliminar recurs",
 	"confirm.delete_title": "Segur que vols eliminar el recurs?",
@@ -319,6 +321,9 @@
 	"reset.password_reset": "S'ha restaurat la contrasenya",
 	"reset.title": "Crear contrasenya",
 	"resource.access_source_file": "Accedir al document d'origen",
+	"resource.add_labels": "Afegeix etiquetes",
+	"resource.add_labels_error": "S'ha produït un error en afegir etiquetes als recursos {{count}}",
+	"resource.add_labels_success": "S'han afegit correctament etiquetes a {{count}} recursos",
 	"resource.authorship": "Autoria",
 	"resource.back_to_results": "Tornar als resultats",
 	"resource.classification": "Classificació",
@@ -385,7 +390,7 @@
 	"resource.status": "Estat",
 	"resource.status_error": "Error en processar",
 	"resource.status_loading": "S'està carregant l'estat...",
-	"resource.status_pending": "{count} recursos pendents de processar",
+	"resource.status_pending": "{{count}} recursos pendents de processar",
 	"resource.status_processed": "Processament completat",
 	"resource.status_processing": "Processament en curs",
 	"resource.status_unknown": "Encara no hi ha cap estat disponible per a aquesta cua de processament del compte",
@@ -476,7 +481,9 @@
 	"stash.settings": "Preferències de la caixa de coneixament",
 	"stash.settings.processes.training.agreement": "Accepto els càrrecs incorreguts en seleccionar aquesta opció",
 	"stash.settings.processes.training.all_labelsets": "Totes les etiquetes",
+	"stash.settings.processes.training.last_run": "Última execució: {{ runDate }}",
 	"stash.settings.processes.training.select-labelsets": "Tria les etiquetes",
+	"stash.settings.processes.training.time_requirement": "El temps necessari per entrenar és d'unes {{hours}} hores que es restaran de les hores disponibles.",
 	"stash.side.activity": "Registre d'activitat",
 	"stash.side.audit": "Auditoria",
 	"stash.side.create": "Creació de contingut",
@@ -528,6 +535,7 @@
 	"upload.invalid_image": "El fitxer seleccionat no és una imatge vàlida",
 	"upload.once_uploaded": "Un cop  pujats, des de la pàgina \"Llistat de recursos\", podràs veure'n l'estat. Quan el semàfor del recurs sigui verd el podràs cercar i visualitzar.",
 	"upload.select_file": "Arrossegueu els fitxers o feu clic aquí",
+	"upload.size_warning_1": "Els fitxers multimèdia no poden superar {{ maxMedia }} i els fitxers no multimèdia {{ max }}.",
 	"upload.takes_time": "Nuclia necessita una estona per a processar els fitxers.",
 	"upload.uploading_queue": "Cua de pujades",
 	"upload.use_folder_as_labels.help": "La carpeta de primer nivell és el nom del conjunt d'etiquetes, les subcarpetes són etiquetes. Si les subcarpetes estan imbricades, els fitxers tindran diverses etiquetes. Les etiquetes es crearan automàticament si encara no estan definides al caixa de coneixement.",
