--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -383,6 +383,9 @@
 	"reset.password_reset": "Your password has been reset",
 	"reset.title": "Create password",
 	"resource.access_source_file": "Access document in its origin",
+	"resource.add_labels": "Add labels",
+	"resource.add_labels_error": "An error occurred while adding labels on {{count}} resources",
+	"resource.add_labels_success": "Labels successfully added on {{count}} resources",
 	"resource.authorship": "Authorship",
 	"resource.back_to_results": "Back to results",
 	"resource.classification": "Classification",
@@ -452,7 +455,7 @@
 	"resource.status": "Status",
 	"resource.status_error": "Error while processing",
 	"resource.status_loading": "Loading status…",
-	"resource.status_pending": "{count} resources pending to be processed",
+	"resource.status_pending": "{{count}} resources pending to be processed",
 	"resource.status_processed": "Processing completed",
 	"resource.status_processing": "Processing in progress",
 	"resource.status_unknown": "No status available for this account processing queue yet",
@@ -642,7 +645,6 @@
 	"stats.total_search": "Total search operations",
 	"tasks.credits.title": "Available cycles",
 	"tasks.credits.upgrade": "Get more cycles",
-	"toast.error": "Error",
 	"toast.information": "Information",
 	"toast.success": "Success",
 	"toast.warning": "Warning",
