--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -15,6 +15,7 @@
 	"account.delete_account": "Eliminar cuenta",
 	"account.delete_account_confirm": "Quiero eliminar la cuenta {{account}} y todos los datos que contiene.",
 	"account.delete_account_confirm_title": "Eliminar la cuenta?",
+	"account.delete_account_warning_1": "Eliminar la cuenta {{account}} eliminará todos los datos existentes",
 	"account.delete_user": "¿Eliminar usuario?",
 	"account.delete_user_confirm": "Quieres eliminar tu usuario y el acceso a Nuclia ?",
 	"account.delete_user_warning": "¿Seguro que quieres eliminar el usuario {{ username }}?",
@@ -33,7 +34,7 @@
 	"account.nua_client": "Nombre del cliente",
 	"account.nua_key_activity": "Registro de actividad",
 	"account.nua_key_activity_subtitle": "TODO",
-	"account.nua_key_activity_title": "TODO",
+	"account.nua_key_activity_title": "{{key}} registro de actividad",
 	"account.nua_key_delete": "Eliminar la clave de la Nuclia Understanding API",
 	"account.nua_key_delete_warning": "Al eliminar esta clave, se perderán todos los trabajos en curso (si los hay).",
 	"account.nua_webhook": "Webhook URL",
@@ -86,6 +87,7 @@
 	"billing.plans": "Planes",
 	"billing.plans_available": "Planes disponibles",
 	"billing.subscribe": "Suscribirse",
+	"billing.total_now": "Total pendiente ahora {{num}}",
 	"billing.upgrade": "Actualizar",
 	"confirm.delete_body": "Eliminar recurso",
 	"confirm.delete_title": "¿Seguro que quieres eliminar este recurso?",
@@ -319,6 +321,9 @@
 	"reset.password_reset": "Se ha restablecido la contraseña",
 	"reset.title": "Crea contraseña",
 	"resource.access_source_file": "Acceder al documento de origen",
+	"resource.add_labels": "Agregar etiquetas",
+	"resource.add_labels_error": "Se produjo un error al agregar etiquetas en {{count}} recursos",
+	"resource.add_labels_success": "Etiquetas añadidas correctamente en {{count}} recursos",
 	"resource.authorship": "Autoría",
 	"resource.back_to_results": "Volver a los resultados",
 	"resource.classification": "Clasificación",
@@ -385,7 +390,7 @@
 	"resource.status": "Estado",
 	"resource.status_error": "Error al procesar",
 	"resource.status_loading": "Cargando estado…",
-	"resource.status_pending": "{count} recursos pendientes de procesar",
+	"resource.status_pending": "{{count}} recursos pendientes de procesar",
 	"resource.status_processed": "Procesamiento completado",
 	"resource.status_processing": "Procesando en progreso",
 	"resource.status_unknown": "Aún no hay estado disponible para la cola de procesamiento de esta cuenta",
@@ -476,7 +481,9 @@
 	"stash.settings": "Preferencias de la caja de conocimiento",
 	"stash.settings.processes.training.agreement": "Acepto los cargos incurridos al seleccionar esta opción",
 	"stash.settings.processes.training.all_labelsets": "Todas las etiquetas",
+	"stash.settings.processes.training.last_run": "Última ejecución: {{ runDate }}",
 	"stash.settings.processes.training.select-labelsets": "Escoge las etiquetas",
+	"stash.settings.processes.training.time_requirement": "El tiempo necesario para entrenar es de unas {{hours}} horas que se restarán de las horas disponibles.",
 	"stash.side.activity": "Registro de actividad",
 	"stash.side.audit": "Auditoría",
 	"stash.side.create": "Creación de contenido",
@@ -528,6 +535,7 @@
 	"upload.invalid_image": "El archivo seleccionad no es una imagen válida",
 	"upload.once_uploaded": "Una vez subidos, desde la página \"Listado de recursos\", podrás ver su estado. Cuando el semáforo del recurso sea verde lo podrás buscar y visualizar.",
 	"upload.select_file": "Arrastre sus archivos o haga clic aquí",
+	"upload.size_warning_1": "Los archivos multimedia no pueden exceder {{ maxMedia }} y los archivos no multimedia {{ max }}.",
 	"upload.takes_time": "Nuclia necesita un rato para procesar los archivos.",
 	"upload.uploading_queue": "Cola de subidas",
 	"upload.use_folder_as_labels.help": "La carpeta de primer nivel es el nombre del conjunto de etiquetas, las subcarpetas son etiquetas. Si las subcarpetas están anidadas, los archivos obtendrán varias etiquetas. Las etiquetas se crearán automáticamente si aún no están definidas en la caja de conocimiento.",
