--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -9,6 +9,8 @@
 	"account.chart_ML_characters": "Caràcters ML",
 	"account.chart_documents": "Documents no mediàtics",
 	"account.chart_media_hours": "Horari dels mitjans",
+	"account.chart_title_pending_resources": "Recursos pendents de tramitar",
+	"account.chart_title_processed": "Recursos processats",
 	"account.code_saved": "Codi introduït",
 	"account.config": "Configuració del compte",
 	"account.consuming": "Processament",
