--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -9,6 +9,8 @@
 	"account.chart_ML_characters": "Caracteres ML",
 	"account.chart_documents": "Documentos no multimedia",
 	"account.chart_media_hours": "Horas de los medios",
+	"account.chart_title_pending_resources": "Recursos pendientes de tramitar",
+	"account.chart_title_processed": "Recursos procesados",
 	"account.code_saved": "Código introducido",
 	"account.config": "Configuración de la cuenta",
 	"account.consuming": "Procesamiento",
