--- a/libs/search-widget/public/i18n/en.json
+++ b/libs/search-widget/public/i18n/en.json
@@ -20,6 +20,7 @@
 	"entities.time": "Time",
 	"entities.title": "Insights",
 	"entities.work_of_art": "Art",
+	"error.processing": "This resource is not fully processed yet",
 	"error.search": "Oops! Something is wrong right now!",
 	"error.search-beta": "Luckily we told you it's a beta! 🙃",
 	"form.title-only": "Search in title only",
