[sc-2225] Account home page improvements (#330)
* Update account home page style to be base 8

* Display processing stats in tabs

* Processed stats chart for current month only

- filter data to display points for current month only
- update x-axis with date only, and a way to differentiate future dates

* Update chart when selecting different stat type

* Don't display pending tab to free account

Add missing translations
Add nice message on pending resources tab

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -6,6 +6,11 @@
 	"account.admin.make_admin": "Hacer administrador",
 	"account.admin.warning": "Si le otorgas a este usuario un rol de administrador, el usuario podrá acceder y editar todas las opciones.",
 	"account.billing": "Facturación",
+	"account.chart_ML_characters": "Caracteres ML",
+	"account.chart_documents": "Documentos no multimedia",
+	"account.chart_media_hours": "Horas de los medios",
+	"account.chart_title_pending_resources": "Recursos pendientes de tramitar",
+	"account.chart_title_processed": "Recursos procesados",
 	"account.code_saved": "Código introducido",
 	"account.config": "Configuración de la cuenta",
 	"account.consuming": "Procesamiento",
@@ -39,6 +44,7 @@
 	"account.nua_key_delete_warning": "Al eliminar esta clave, se perderán todos los trabajos en curso (si los hay).",
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook.help": "Una vez que se procesan sus datos, el resultado se publica en esta URL",
+	"account.public": "Público",
 	"account.related_kbs": "Cajas de conocimiento de la cuenta",
 	"account.replace_config": "Reemplazar configuración",
 	"account.settings": "Preferencias de la cuenta",
