--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -6,6 +6,11 @@
 	"account.admin.make_admin": "Fer Administrador",
 	"account.admin.warning": "Si converteixes aquest usuari en administrador podrà accedir i editar a totes les opcions.",
 	"account.billing": "Facturació",
+	"account.chart_ML_characters": "Caràcters ML",
+	"account.chart_documents": "Documents no mediàtics",
+	"account.chart_media_hours": "Horari dels mitjans",
+	"account.chart_title_pending_resources": "Recursos pendents de tramitar",
+	"account.chart_title_processed": "Recursos processats",
 	"account.code_saved": "Codi introduït",
 	"account.config": "Configuració del compte",
 	"account.consuming": "Processament",
@@ -39,6 +44,7 @@
 	"account.nua_key_delete_warning": "Si suprimiu aquesta clau, es perdran tots els treballs en curs (si n'hi ha).",
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook.help": "Un cop processades les teves dades, el resultat es publica a aquest URL",
+	"account.public": "Públic",
 	"account.related_kbs": "Knowledge Box relacionats amb l’Account",
 	"account.replace_config": "Reemplaçar configuració",
 	"account.settings": "Preferències de l’Account",
