--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -6,7 +6,11 @@
 	"account.admin.make_admin": "Make Administrator",
 	"account.admin.warning": "If you give the administrator role to this user, they will be able to access and edit all options.",
 	"account.billing": "Billing",
-	"account.characters": "Total indexed characters",
+	"account.chart_ML_characters": "ML characters",
+	"account.chart_documents": "Non media documents",
+	"account.chart_media_hours": "Media hours",
+	"account.chart_title_pending_resources": "Resources pending to be processed",
+	"account.chart_title_processed": "Processed resources",
 	"account.code_saved": "Code entered",
 	"account.config": "Account settings",
 	"account.consuming": "Consuming",
@@ -48,6 +52,7 @@
 	"account.nua_keys": "Understanding API keys",
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook.help": "Once your data is processed, the result is posted to this URL",
+	"account.public": "Public",
 	"account.related_kbs": "Account’s Knowledge Boxes",
 	"account.renewal": "Processing consumption renews monthly",
 	"account.replace_config": "Replace settings",
@@ -66,7 +71,6 @@
 	"account.title_help": "Account name",
 	"account.token_description": "<strong>Important!</strong> Copy and save the Token code. It will disappear once added.",
 	"account.token_generation_warning": "If you generate a new key, the current key will be disabled and any on-going jobs will be lost",
-	"account.total": "State: <strong>{{total}}</strong> Knowledge Box, <strong>{{public}}</strong> public",
 	"account.total_queries": "Total number of queries",
 	"account.type.basic": "Basic Account",
 	"account.type.kb": "Knowledge box",
