A few grammar corrections

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -7,9 +7,9 @@
 	"account.admin.warning": "If you give the administrator role to this user, they will be able to access and edit all options.",
 	"account.billing": "Billing",
 	"account.chart_ML_characters": "ML characters",
-	"account.chart_documents": "Non media documents",
+	"account.chart_documents": "Non-media documents",
 	"account.chart_error_chars": "Unable to fetch \"ML characters\" data",
-	"account.chart_error_docs_no_media": "Unable to fetch \"Non media document\" data",
+	"account.chart_error_docs_no_media": "Unable to fetch \"Non-media document\" data",
 	"account.chart_error_media_seconds": "Unable to fetch \"Media hours\" data",
 	"account.chart_media_hours": "Media hours",
 	"account.chart_title_pending_resources": "Resources pending to be processed",
@@ -51,7 +51,7 @@
 	"account.nua_key_activity_subtitle": "Last 30 days Knowledge box activity",
 	"account.nua_key_activity_title": "{{key}} activity log",
 	"account.nua_key_delete": "Delete Nuclia Understanding API key",
-	"account.nua_key_delete_warning": "By deleting this key all the ongoing jobs will be lost.",
+	"account.nua_key_delete_warning": "By deleting this key, all the ongoing jobs will be lost.",
 	"account.nua_keys": "Understanding API keys",
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook.help": "Once your data is processed, the result is posted to this URL",
@@ -73,7 +73,7 @@
 	"account.title": "Account name",
 	"account.title_help": "Account name",
 	"account.token_description": "<strong>Important!</strong> Copy and save the Token code. It will disappear once added.",
-	"account.token_generation_warning": "If you generate a new key, the current key will be disabled and any on-going jobs will be lost",
+	"account.token_generation_warning": "If you generate a new key, the current key will be disabled and any ongoing jobs will be lost",
 	"account.total_queries": "Total number of queries",
 	"account.type.basic": "Basic Account",
 	"account.type.kb": "Knowledge box",
@@ -81,7 +81,7 @@
 	"account.users": "Account users management",
 	"account.users_amount": "Total number of users in the account",
 	"account.users_left": "Total licenses left",
-	"account.zone_description": "Zone where data will be host",
+	"account.zone_description": "Zone where data is hosted",
 	"accounts.add_user_input": "User’s email",
 	"accounts.addable": "licenses available",
 	"accounts.filter_by": "Find users by name or email",
@@ -105,13 +105,13 @@
 	"billing.budget": "On-demand budget",
 	"billing.budget_description": "Set a monthly limit on overspending.",
 	"billing.company_name": "Company name",
-	"billing.customized_plan": "If you need a customized plan for your company contact us at",
+	"billing.customized_plan": "If you need a customized plan for your company, contact us at",
 	"billing.enter_card_details": "Enter your card details",
 	"billing.free_account": "Free account",
 	"billing.monthly": "Monthly",
 	"billing.monthly_consumibles": "Monthly usage",
 	"billing.no_limit": "No limit to usage",
-	"billing.no_limit_description": "If you do not set an usage limit, you agree to pay for any level of usage without us notifying you.",
+	"billing.no_limit_description": "If you do not set a usage limit, you agree to pay for any level of usage without us notifying you.",
 	"billing.parameter.docs_no_media": "Docs No Media",
 	"billing.parameter.max_size_file_media": "Max Size File Media",
 	"billing.parameter.max_size_file_no_media": "Max Size File No Media",
@@ -143,7 +143,7 @@
 	"entity.add_group": "Add entity group",
 	"entity.add_short_description": "",
 	"entity.create_group": "Create entity group",
-	"entity.delete_entities_warning": "If you delete this insight it will disappear from all resources and search suggestions",
+	"entity.delete_entities_warning": "If you delete this insight, it will disappear from all resources and search suggestions",
 	"entity.delete_entity": "Delete entity",
 	"entity.entities": "Entities",
 	"entity.entity": "Entity",
@@ -372,7 +372,7 @@
 	"quickstart.task3.title": "Watch tutorial video",
 	"quickstart.task4.description": "Use the “Content Options” in the menu to upload:<br>• 1 document (Word or PDF)<br>• 1 media file (audio or video) in English, Spanish, French, German, Catalan or Italian<br>• 1 link",
 	"quickstart.task4.title": "Upload 3 files (1 minute) ",
-	"quickstart.task5.description": "Check the processing status of your files.<br>Once your files are processed use the search bar to find results.",
+	"quickstart.task5.description": "Check the processing status of your files.<br>Once your files are processed, use the search bar to find results.",
 	"quickstart.task5.title": "Make 3 searches (2 minutes)",
 	"quickstart.task6.description": "Use your API Key to make 3 queries to the API.",
 	"quickstart.task6.title": "Make 3 API Calls (2 minutes)",
