[sc-2812] Prevent chart to crash on error while loading data

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -8,6 +8,9 @@
 	"account.billing": "Facturació",
 	"account.chart_ML_characters": "Caràcters ML",
 	"account.chart_documents": "Documents no mediàtics",
+	"account.chart_error_chars": "No s'han pogut obtenir les dades dels \"caràcters ML\".",
+	"account.chart_error_docs_no_media": "No s'han pogut obtenir les dades del \"document no multimèdia\".",
+	"account.chart_error_media_seconds": "No s'han pogut obtenir les dades de l'\"Horari dels mitjans\".",
 	"account.chart_media_hours": "Horari dels mitjans",
 	"account.chart_title_pending_resources": "Recursos pendents de tramitar",
 	"account.chart_title_processed": "Recursos processats",
