--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -8,6 +8,9 @@
 	"account.billing": "Billing",
 	"account.chart_ML_characters": "ML characters",
 	"account.chart_documents": "Non media documents",
+	"account.chart_error_chars": "Unable to fetch \"ML characters\" data",
+	"account.chart_error_docs_no_media": "Unable to fetch \"Non media document\" data",
+	"account.chart_error_media_seconds": "Unable to fetch \"Media hours\" data",
 	"account.chart_media_hours": "Media hours",
 	"account.chart_title_pending_resources": "Resources pending to be processed",
 	"account.chart_title_processed": "Processed resources",
