--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -8,6 +8,9 @@
 	"account.billing": "Facturación",
 	"account.chart_ML_characters": "Caracteres ML",
 	"account.chart_documents": "Documentos no multimedia",
+	"account.chart_error_chars": "No se pueden recuperar los datos de \"caracteres ML\"",
+	"account.chart_error_docs_no_media": "No se pueden recuperar los datos del \"documento no multimedia\"",
+	"account.chart_error_media_seconds": "No se pueden obtener los datos de \"Horas de medios\"",
 	"account.chart_media_hours": "Horas de los medios",
 	"account.chart_title_pending_resources": "Recursos pendientes de tramitar",
 	"account.chart_title_processed": "Recursos procesados",
