A few grammar corrections (#331)
* A few grammar corrections

* Fix catalan translation

* Add missing translations

* Fix typo

Co-authored-by: mpellerin42 <mpellerin42@gmail.com>

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -7,7 +7,7 @@
 	"account.admin.warning": "Si converteixes aquest usuari en administrador podrà accedir i editar a totes les opcions.",
 	"account.billing": "Facturació",
 	"account.chart_ML_characters": "Caràcters ML",
-	"account.chart_documents": "Documents no mediàtics",
+	"account.chart_documents": "Documents no multimèdia",
 	"account.chart_error_chars": "No s'han pogut obtenir les dades dels \"caràcters ML\".",
 	"account.chart_error_docs_no_media": "No s'han pogut obtenir les dades del \"document no multimèdia\".",
 	"account.chart_error_media_seconds": "No s'han pogut obtenir les dades de l'\"Horari dels mitjans\".",
@@ -90,6 +90,7 @@
 	"billing.annual": "Anual",
 	"billing.automatically_renewed": "Es renova automàticament cada mes",
 	"billing.company_name": "Nom de l'empresa",
+	"billing.customized_plan": "Si necessites un pla personalitzat per a la teva empresa, contacta amb nosaltres a",
 	"billing.monthly": "Mensual",
 	"billing.monthly_consumibles": "Consums mensuals",
 	"billing.plan_settings": "Opcions del pla",
@@ -107,6 +108,7 @@
 	"entity.add_group": "Afegeix un grup d'entitats",
 	"entity.add_short_description": "Afegeix un títol o línia de text descriptiva",
 	"entity.create_group": "Crear un grup d'entitats",
+	"entity.delete_entities_warning": "Si suprimeixes aquesta informació, desapareixerà de tots els recursos i suggeriments de cerca",
 	"entity.delete_entity": "Eliminar l’entitat",
 	"entity.entities": "Entitats",
 	"entity.entity": "Entitat",
