--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -90,6 +90,7 @@
 	"billing.annual": "Anual",
 	"billing.automatically_renewed": "Se renueva automáticamente cada mes",
 	"billing.company_name": "Nombre de la empresa",
+	"billing.customized_plan": "Si necesita un plan personalizado para su empresa, contáctenos en",
 	"billing.monthly": "Mensual",
 	"billing.monthly_consumibles": "Consumo mensual",
 	"billing.plan_settings": "Opciones del plan",
@@ -107,6 +108,7 @@
 	"entity.add_group": "Agregar grupo de entidades",
 	"entity.add_short_description": "Añade un título o línea de texto descriptiva",
 	"entity.create_group": "Crear grupo de entidades",
+	"entity.delete_entities_warning": "Si elimina esta información, desaparecerá de todos los recursos y sugerencias de búsqueda",
 	"entity.delete_entity": "Eliminar la entidad",
 	"entity.entities": "Entidades",
 	"entity.entity": "Entidad",
