New PDF tile component
  - Extract common tile style in _tile.scss
  - Extract common components in common: indicators, paragraph-results, thumbnail
  - Use PdfTile when icon is application/pdf
  - Fix thumbnail background color
  - Create DocTypeIndicator for PdfTile
  - Refactor CloseButton to become IconButton
  - Add optional parameters to translation
  - Display expanded tile in fullscreen

--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -38,6 +38,7 @@
 	"resource.show-all": "Mostra tots els paràgrafs",
 	"resource.source": "Document d'origen",
 	"resource.summary": "Resum",
+	"results.count": "Resultat {{index}} de {{total}}",
 	"results.empty": "Cap resultat",
 	"results.paragraphs": "Paràgrafs rellevants",
 	"results.semantic": "Resultats semàntics",
