--- a/libs/search-widget/public/i18n/en.json
+++ b/libs/search-widget/public/i18n/en.json
@@ -39,6 +39,7 @@
 	"resource.show-all": "Show all paragraphs",
 	"resource.source": "Source document",
 	"resource.summary": "Summary",
+	"results.count": "Result {{index}} of {{total}}",
 	"results.empty": "No result found",
 	"results.paragraphs": "Relevant paragraphs",
 	"results.semantic": "Semantic results",
