[sc-2809] New graphic for resources pending to be processed

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -11,7 +11,10 @@
 	"account.chart_error_chars": "No se pueden recuperar los datos de \"caracteres ML\"",
 	"account.chart_error_docs_no_media": "No se pueden recuperar los datos del \"documento no multimedia\"",
 	"account.chart_error_media_seconds": "No se pueden obtener los datos de \"Horas de medios\"",
+	"account.chart_error_processing_status": "No se pueden recuperar los datos de \"recursos pendientes de procesamiento\"",
 	"account.chart_media_hours": "Horas de los medios",
+	"account.chart_number_resources": "Número de recursos",
+	"account.chart_range_label": "Último {{hours}}",
 	"account.chart_title_pending_resources": "Recursos pendientes de tramitar",
 	"account.chart_title_processed": "Recursos procesados",
 	"account.code_saved": "Código introducido",
