--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -11,7 +11,10 @@
 	"account.chart_error_chars": "No s'han pogut obtenir les dades dels \"caràcters ML\".",
 	"account.chart_error_docs_no_media": "No s'han pogut obtenir les dades del \"document no multimèdia\".",
 	"account.chart_error_media_seconds": "No s'han pogut obtenir les dades de l'\"Horari dels mitjans\".",
+	"account.chart_error_processing_status": "No s'han pogut obtenir les dades dels \"recursos pendents de processar\".",
 	"account.chart_media_hours": "Horari dels mitjans",
+	"account.chart_number_resources": "Nombre de recursos",
+	"account.chart_range_label": "Darrers {{hours}}",
 	"account.chart_title_pending_resources": "Recursos pendents de tramitar",
 	"account.chart_title_processed": "Recursos processats",
 	"account.code_saved": "Codi introduït",
