[sc-2809] New graphic for resources pending to be processed (#335)
* [sc-2809] New graphic for resources pending to be processed

* Don't display all labels on x-axis

* Fix Changelog

* Fix imports

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -11,7 +11,10 @@
 	"account.chart_error_chars": "Unable to fetch \"ML characters\" data",
 	"account.chart_error_docs_no_media": "Unable to fetch \"Non-media document\" data",
 	"account.chart_error_media_seconds": "Unable to fetch \"Media hours\" data",
+	"account.chart_error_processing_status": "Unable to fetch \"resources pending to be processed\" data",
 	"account.chart_media_hours": "Media hours",
+	"account.chart_number_resources": "Number of resources",
+	"account.chart_range_label": "Last {{hours}}",
 	"account.chart_title_pending_resources": "Resources pending to be processed",
 	"account.chart_title_processed": "Processed resources",
 	"account.code_saved": "Code entered",
