[sc-2916] Add video widget mode in widget editor

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -630,9 +630,9 @@
 	"stash.widgets.entityAnnotation": "Entity annotation",
 	"stash.widgets.invalid-id": "Invalid widget id",
 	"stash.widgets.mode": "Mode",
-	"stash.widgets.mode.button": "Button",
-	"stash.widgets.mode.form": "Form",
-	"stash.widgets.mode.input": "Input",
+	"stash.widgets.mode.form": "Embedded search widget",
+	"stash.widgets.mode.input": "Popup search widget",
+	"stash.widgets.mode.video": "Search bar and video widget",
 	"stash.widgets.placeholder": "Placeholder",
 	"stash.widgets.preferences": "Preferences",
 	"stash.widgets.preview": "Preview",
