--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -536,6 +536,10 @@
 	"stash.widgets": "Widgets",
 	"stash.widgets.editLabels": "Editar etiquetas",
 	"stash.widgets.entityAnnotation": "Anotación de entidad",
+	"stash.widgets.mode": "Modo",
+	"stash.widgets.mode.form": "Widget de búsqueda integrado",
+	"stash.widgets.mode.input": "Widget de búsqueda emergente",
+	"stash.widgets.mode.video": "Barra de búsqueda y widget de video",
 	"stats.get_started": "Empezar",
 	"stats.total.title": "Número total de recursos",
 	"tasks.credits.title": "Ciclos disponibles",
