--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -536,6 +536,10 @@
 	"stash.widgets": "Widgets",
 	"stash.widgets.editLabels": "Edita les etiquetes",
 	"stash.widgets.entityAnnotation": "Anotació de l'entitat",
+	"stash.widgets.mode": "Mode",
+	"stash.widgets.mode.form": "Giny de cerca incrustat",
+	"stash.widgets.mode.input": "Giny de cerca emergent",
+	"stash.widgets.mode.video": "Barra de cerca i widget de vídeo",
 	"stats.get_started": "Començar",
 	"stats.total.title": "Nombre total de recursos",
 	"tasks.credits.title": "Cicles disponibles",
