[sc-2939] Update languages list in upload modal
  - Update languages list in upload modal
  - Sort languages list alphabetically

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -233,11 +233,26 @@
 	"generic.zone_and_provider": "Zona i proveïdor de processament",
 	"input.placeholder": "La teva cerca",
 	"language.ca": "Català",
+	"language.cs": "Txec",
+	"language.da": "Danès",
 	"language.de": "Alemany",
+	"language.el": "Grec",
 	"language.en": "Anglès",
 	"language.es": "Espanyol",
+	"language.eu": "Basc",
+	"language.fi": "Finès",
 	"language.fr": "Francès",
+	"language.gl": "Gallec",
+	"language.hr": "Croata",
 	"language.it": "Italià",
+	"language.nl": "Holandès",
+	"language.no": "Noruec",
+	"language.pl": "Polonès",
+	"language.pt": "Portuguès",
+	"language.ro": "Romanès",
+	"language.ru": "Rus",
+	"language.sv": "Suec",
+	"language.tr": "Turc",
 	"login.access_request": "vol accedir al teu compte de Nuclia i poder: ",
 	"login.check_email": "Comprova el teu correu!",
 	"login.continue_with": "Continua amb",
