--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -274,11 +274,26 @@
 	"generic.zone_and_provider": "Provider and processing zone",
 	"input.placeholder": "Search",
 	"language.ca": "Catalan",
+	"language.cs": "Czech",
+	"language.da": "Danish",
 	"language.de": "German",
+	"language.el": "Greek",
 	"language.en": "English",
 	"language.es": "Spanish",
+	"language.eu": "Basque",
+	"language.fi": "Finnish",
 	"language.fr": "French",
+	"language.gl": "Galician",
+	"language.hr": "Croatian",
 	"language.it": "Italian",
+	"language.nl": "Dutch",
+	"language.no": "Norwegian",
+	"language.pl": "Polish",
+	"language.pt": "Portuguese",
+	"language.ro": "Romanian",
+	"language.ru": "Russian",
+	"language.sv": "Swedish",
+	"language.tr": "Turkish",
 	"link.create.error": "Error when creating uploading the link",
 	"login.access_request": "wants to access Nuclia on your behalf and be able to:",
 	"login.agree": "I agree to Nuclia’s",
