--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -233,11 +233,26 @@
 	"generic.zone_and_provider": "Zona y proveedor de procesamiento",
 	"input.placeholder": "Tu búsqueda",
 	"language.ca": "Catalán",
+	"language.cs": "Checo",
+	"language.da": "Danés",
 	"language.de": "Alemán",
+	"language.el": "Griego",
 	"language.en": "Inglés",
 	"language.es": "Español",
+	"language.eu": "Vasco",
+	"language.fi": "Finlandés",
 	"language.fr": "Francés",
+	"language.gl": "Gallego",
+	"language.hr": "Croata",
 	"language.it": "Italiano",
+	"language.nl": "Holandés",
+	"language.no": "Noruego",
+	"language.pl": "Polaco",
+	"language.pt": "Portugués",
+	"language.ro": "Rumano",
+	"language.ru": "Ruso",
+	"language.sv": "Sueco",
+	"language.tr": "Turco",
 	"login.access_request": "quiere acceder a tu cuenta de Nuclia y poder: ",
 	"login.check_email": "!Revisa tu correo!",
 	"login.continue_with": "Continua con",
