typo labeller => labeler

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -589,8 +589,8 @@
 	"stash.settings.processes": "Process management",
 	"stash.settings.processes.classifier": "Label search intent training",
 	"stash.settings.processes.classifier.info": "In order to get accurate label search suggestions, existing content has to be labeled. As more content is labeled, training will improve. You can create new labels and classifications from the ontology page. ",
-	"stash.settings.processes.labeller": " Automatic label training",
-	"stash.settings.processes.labeller.info": "In order to label sentences automatically, existing content has to be labeled. As more content is labeled, training will improve. You can create new labels and classifications from the ontology page. ",
+	"stash.settings.processes.labeler": " Automatic label training",
+	"stash.settings.processes.labeler.info": "In order to label sentences automatically, existing content has to be labeled. As more content is labeled, training will improve. You can create new labels and classifications from the ontology page. ",
 	"stash.settings.processes.training.active": "There is an active training that you can stop at any time. You will receive an email when it is complete.",
 	"stash.settings.processes.training.agreement": "I accept the charges incurred by selecting this option",
 	"stash.settings.processes.training.all_labelsets": "All label sets",
