[sc-2905] Account dashboard improvements
  - Add account dashboard item in account navbar
  - Display account type on dashboard
  - Navigate to manage kb/billing by clicking on the corresponding container of the dashboard

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -40,6 +40,7 @@
 	"account.existing_keys": "Existing keys",
 	"account.full_name": "Name and surname",
 	"account.generate_key": "Generate a new key",
+	"account.home": "Account dashboard",
 	"account.invited_user": "We have sent an invitation email to {{user}} to join this account",
 	"account.knowledgeboxes": "Knowledge boxes",
 	"account.licence": "License",
@@ -78,9 +79,11 @@
 	"account.token_description": "<strong>Important!</strong> Copy and save the Token code. It will disappear once added.",
 	"account.token_generation_warning": "If you generate a new key, the current key will be disabled and any ongoing jobs will be lost",
 	"account.total_queries": "Total number of queries",
-	"account.type.basic": "Basic Account",
 	"account.type.kb": "Knowledge box",
 	"account.type.manage": "Manage",
+	"account.type.stash-basic": "Basic Account",
+	"account.type.stash-enterprise": "Enterprise Account",
+	"account.type.stash-team": "Teams Account",
 	"account.users": "Account users management",
 	"account.users_amount": "Total number of users in the account",
 	"account.users_left": "Total licenses left",
@@ -127,6 +130,7 @@
 	"billing.parameter.searches": "Searches",
 	"billing.parameter.train_hours": "Train hours",
 	"billing.payment_details": "Payment details",
+	"billing.plan": "Plan",
 	"billing.plan_settings": "Plan settings",
 	"billing.plans": "Plans",
 	"billing.plans_available": "Plans available",
