--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -33,6 +33,7 @@
 	"account.enhanced_model": "Model millorat",
 	"account.full_name": "Nom i Cognoms",
 	"account.generate_key": "Generar un nou codi",
+	"account.home": "Tauler de control del compte",
 	"account.invited_user": "L'usuari {{user}} ha rebut un correu amb una invitació a participar en aquest compte",
 	"account.knowledgeboxes": "Caixes de coneixement",
 	"account.licence": "Llicència",
@@ -68,9 +69,11 @@
 	"account.token_description": "<strong>Important!</strong> Copia i guarda el codi del Token. Un cop afegit, desapareixerà. ",
 	"account.token_generation_warning": "Si generes un nou codi perdràs l’accés amb la clau actual i es perdran els processos que s'estiguin executant en aquests moments.",
 	"account.total_queries": "Nombre total de cerques",
-	"account.type.basic": "Compte Bàsic",
 	"account.type.kb": "Caixes de coneixement",
 	"account.type.manage": "Gestionar",
+	"account.type.stash-basic": "Compte Bàsic",
+	"account.type.stash-enterprise": "Compte d'empresa",
+	"account.type.stash-team": "Compte d'equips",
 	"account.users": "Gestió d'usuaris",
 	"account.users_amount": "Nombre total d'usuaris al compte",
 	"account.users_left": "Llicències disponibles",
@@ -96,6 +99,7 @@
 	"billing.customized_plan": "Si necessites un pla personalitzat per a la teva empresa, contacta amb nosaltres a",
 	"billing.monthly": "Mensual",
 	"billing.monthly_consumibles": "Consums mensuals",
+	"billing.plan": "Plan",
 	"billing.plan_settings": "Opcions del pla",
 	"billing.plans": "Plans",
 	"billing.plans_available": "Plans disponibles",
