--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -33,6 +33,7 @@
 	"account.enhanced_model": "Modelo mejorado",
 	"account.full_name": "Nombre y Apellidos",
 	"account.generate_key": "Generar un nuevo código",
+	"account.home": "Panel de cuenta",
 	"account.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta cuenta",
 	"account.knowledgeboxes": "Cajas de conocimiento",
 	"account.licence": "Licencia",
@@ -68,9 +69,11 @@
 	"account.token_description": "<strong>¡Importante!</strong> Copia y guarda el código del Token. Una vez añadido, desaparecerá.",
 	"account.token_generation_warning": "Si generas un nuevo código perderás el acceso con la clave actual y se perderán los procesos que se estén ejecutando en estos momentos.",
 	"account.total_queries": "Número total de búsquedas",
-	"account.type.basic": "Cuenta básica",
 	"account.type.kb": "Cajas de conocimiento",
 	"account.type.manage": "Gestionar",
+	"account.type.stash-basic": "Cuenta básica",
+	"account.type.stash-enterprise": "Cuenta empresarial",
+	"account.type.stash-team": "Cuenta de equipos",
 	"account.users": "Gestión de usuarios",
 	"account.users_amount": "Usuarios totales a la cuenta",
 	"account.users_left": "Licencias disponibles",
@@ -96,6 +99,7 @@
 	"billing.customized_plan": "Si necesita un plan personalizado para su empresa, contáctenos en",
 	"billing.monthly": "Mensual",
 	"billing.monthly_consumibles": "Consumo mensual",
+	"billing.plan": "Plan",
 	"billing.plan_settings": "Opciones del plan",
 	"billing.plans": "Planes",
 	"billing.plans_available": "Planes disponibles",
